welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:13: error: not found: value doirte
	doirte()
        ^